--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -5,30 +5,36 @@
 }
 
 body {
-    
+     
     background-color: #d9dcd6;
 }
 
-.header { 
+.header {   
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-height: 300px;
     box-sizing: border-box; 
-    padding: 20px;
+    padding: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    
 }
 
-.header h1 {
+.header h1 {    
     display: inline-block;
     font-size: 48px;
+    
 }
 
 #seo {
     color: #d9dcd6;
 }
 
-.link {
+.link {     
     margin-right: 20px;
-    float: right;
+    float: right; 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     
@@ -56,7 +62,7 @@ body {
 .marketing-meeting-image {
     height: 800px;
     width: 100%;
-    margin-top: 0.5px;
+    margin-top: 100px;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
@@ -64,9 +70,11 @@ body {
 }
 .content {
     width: 75%;
+    height: 100%;
     display: inline-block;
     margin-left: 20px;
     float: none;
+   
 }
 
 .search-engine-optimization {
@@ -131,7 +139,7 @@ body {
 
 
 
-.benefits {
+.benefits {  
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -188,6 +196,7 @@ body {
 
 
 .footer {
+   
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
